fixed the alignment of the settings gear

--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,11 @@ button.biggerer {
     cursor:pointer;
 }
 
+#ssettings {
+    height:28px;
+    padding-top:8px;
+}
+
 #login_container {
     position:absolute;
     top:100px;
